[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyStraight.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Survive - Chiptune Comp 04.ogg" type="AudioStream" id=5]

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 400, 300, 1 )
flag_disable_z = true
gravity = Vector3( -100, 0, 0 )
initial_velocity_random = 1.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 294.01 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 417.225, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 296.839 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 405.695, 317.5 )
amount = 100
lifetime = 3.0
preprocess = 100.0
process_material = SubResource( 4 )

[node name="Player" parent="." groups=[
"player",
] instance=ExtResource( 2 )]
position = Vector2( 69.2965, 301.227 )

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D4" type="StaticBody2D" parent="Walls"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D4"]
position = Vector2( 813.173, 294.156 )
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D3"]
position = Vector2( -12.7279, 299.813 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2( 388.909, -11.3137 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
position = Vector2( 390.323, 612.354 )
shape = SubResource( 1 )

[node name="BulletSponge" type="Node2D" parent="."]

[node name="EnemySponge" type="Node2D" parent="."]

[node name="EnemyStraight" parent="EnemySponge" instance=ExtResource( 3 )]
position = Vector2( 769.332, 308.299 )

[node name="EnemyOutOfBounds" type="Area2D" parent="EnemySponge"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySponge/EnemyOutOfBounds"]
position = Vector2( -329.512, 295.571 )
shape = SubResource( 3 )

[node name="EnemySpawnTimer" type="Timer" parent="EnemySponge"]
wait_time = 3.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/HUD"]
margin_right = 40.0
margin_bottom = 14.0

[node name="LevelIncrease" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="area_entered" from="EnemySponge/EnemyOutOfBounds" to="." method="_on_EnemyOutOfBounds_area_entered"]
[connection signal="timeout" from="EnemySponge/EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="LevelIncrease" to="." method="_on_LevelIncrease_timeout"]
